# vk-message-exporter

./: .clang-format  CMakeLists.txt  init.sql
src/: args.cpp  args.h  curl.cpp  curl.h  error.h  main.cpp  vk_data.cpp  vk_data.h
src/api/: json_response.cpp  json_response.h  message_stream.cpp  message_stream.h  params.cpp  params.h  session.cpp  session.h  user_pool.cpp  user_pool.h  vk_data.cpp  vk_data.h
src/db/: db.cpp  db.h  sql.h  storage.cpp  storage.h
